--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,16 @@
 Django==1.11
+Faker==1.0.2
 django-environ==0.4.5
 djangorestframework==3.7.1
 django-cors-headers==2.5.1
+django-webpack-loader==0.6.0
+pep8==1.7.1
 psycopg2==2.7.7
+pytest==4.3.0
+pytest-cache==1.0
+pytest-django==3.4.8
+pytest-faker==2.0.0
+pytest-mock==1.10.1
+pytest-pep8==1.0.6
+pytest-sugar==0.9.2
+zappa==0.47.1
